--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 #container-config {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 90%;
   display: flex;
   flex: 0 0 100%;
   background-color: #f1f3f4;
@@ -46,11 +46,12 @@
 #container-config #audio{
   flex: 1;
 }
-#canvas {
+/* #canvas {
     height: 500px;
     width: 500px;
-    
-}
+    height: 90vh;
+    width: 90vw;
+} */
 .config{
     background-color: white;
     margin-top: 8px;
@@ -62,4 +63,14 @@
 .config div label {
   font-weight: 600;
   display: block;
+}
+
+img:not([src]) {
+  opacity: 0;
+}
+.logo_img {
+  position: absolute;
+}
+body {
+  overflow-x: hidden; /* Get rid of the scroll bar at the bottom */
 }
