--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -50,11 +50,11 @@
     background-color: white;
     margin-top: 8px;
 }
-.config div {
+.config> div {
   padding: 10px;
   border-top: 1px solid black;
 }
 .config div label {
-  font-weight: 600;
+  font-weight: 500 !important;
   display: block;
 }
